@@ -1,0 +1,9 @@
+Title: mail: now allows extra HTML section between body and table
+Level: 1
+Component: notifications
+Compatible: compat
+Version: 1.4.0i2
+Date: 1476183155
+Class: feature
+
+
