@@ -25,6 +25,9 @@
     * 3914 FIX: Roles: Aliases are now unique during cloning
     * 3820 FIX: Network scan: no longer fails completely if hostname already exists in configuration...
 
+    Notifications:
+    * 3957 mail: now allows extra HTML section between body and table
+
     BI:
     * 3955 BI rule ID can now be renamed
 
